Contact US alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -648,6 +648,10 @@ li.list-inline-item.text-center p {
   color: #000000;
 }
 
+li.list-inline-item.text-center {
+  min-width: 135px;
+}
+
 /* Footer */
 
 .footer {
